--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-sticky-box": "^0.9.3",
+    "styled-components": "^5.1.1",
+    "styled-icons": "^10.6.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -35,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.0"
   }
 }
